nullaway_error_126567bc-0564-4f1c-805a-34cd97a070f3.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/aws/Route53Binder.java:219: error: [NullAway] passing @Nullable parameter 'getResourceRecordSet(domain, hostedZone)' where @NonNull is required
            return new ResourceRecordSetWithHostedZone(hostedZone, getResourceRecordSet(domain, hostedZone));
                                                                                       ^
